# booker

./: Makefile  README.md  pyproject.toml
.github/: copilot-rules.md
docs/: agent-rules.md  code-index.md  sant_pau_api.md
scripts/: build_code_index.py
tests/: fixtures.py
tests/integration/: test_sant_pau_integration.py
tests/unit/: test_conversions_and_status.py  test_sant_pau_activities.py  test_sant_pau_calendar.py  test_sant_pau_prices.py  test_sant_pau_sessions.py
ticket_providers/: __init__.py  base.py  models.py
ticket_providers/sant_pau/: __init__.py  constants.py  helpers.py  provider.py
